# C-Template

./: .gitignore  CMakeLists.txt  justfile
cmake/: cflags.cmake  linker.cmake  pkg.cmake
impl/: _impl.org  strings.c
include/: include.org
include/util/: strings.h  types.h
scripts/: scripts.org
